like button, p button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <h1>JavaScript-Examples</h1>
     <h2>Subtitle</h2>
-    <h3>Number of likes: <span>13</span></h3>
-    <button>LIKE</button>
-    <p>Random Paragraph</p>
+    <h3>Number of likes: <span id="count">1</span></h3>
+    <button id="like">Like</button>
+    <button id="add">Add p</button>
+    <button id="remove">Remove p</button>
+    <main>
+        <p>Random Paragraph</p>
+    </main>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="scripts.js"></script>
 </body>
