finishing js examples

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>JavaScript-Examples</h1>
+    <div id="box-container"></div>
     <h2>Subtitle</h2>
     <h3>Number of likes: <span id="count">1</span></h3>
     <button id="like">Like</button>
