--- a/to-do/index.html
+++ b/to-do/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
+    <h1>My Simple todo list</h1>
+    <h2>Todos:</h2>
+    <ul></ul>
+    <input type="text">
+    <button>Add todo</button>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js"></script>  
 </body>
 </html>
